cmake_minimum_required(VERSION 2.8)
enable_testing()
include_directories(
  ..
  )

# add_executable (test_startstop startstop.cpp)
# set_target_properties(test_startstop PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/cppTimer/test)
# TARGET_LINK_LIBRARIES(test_startstop cpptimer)
# add_test(TestStartStop ${PROJECT_SOURCE_DIR}/lib/cppTimer/test/test_startstop)

# add_executable (test_twotimers twotimers.cpp)
# set_target_properties(test_twotimers PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/cppTimer/test)
# TARGET_LINK_LIBRARIES(test_twotimers cpptimer)
# add_test(TestTwotimers ${PROJECT_SOURCE_DIR}/lib/cppTimer/test/test_twotimers)
